<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculadoraActivity"    >


    <EditText
        android:id="@+id/tvResultado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:gravity="right|center_vertical"
        android:text=""
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline202"
        app:layout_constraintEnd_toStartOf="@+id/guideline105"
        app:layout_constraintStart_toStartOf="@+id/guideline101"
        app:layout_constraintTop_toBottomOf="@+id/guideline2015"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvVistaPrevia"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:gravity="right|center_vertical"
        android:text=""
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2015"
        app:layout_constraintTop_toTopOf="@+id/guideline201"
        app:layout_constraintEnd_toStartOf="@+id/guideline105"
        app:layout_constraintStart_toStartOf="@+id/guideline101"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btAC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="AC"
        android:backgroundTint="@color/pink"
        android:onClick="LimpiarResultado"
        app:layout_constraintBottom_toTopOf="@+id/guideline203"
        app:layout_constraintEnd_toStartOf="@+id/guideline102"
        app:layout_constraintStart_toStartOf="@+id/guideline101"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

    <Button
        android:id="@+id/btDEL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:onClick="DEL"
        android:backgroundTint="@color/pink"
        android:text="@string/signDe"
        app:layout_constraintBottom_toTopOf="@+id/guideline203"
        app:layout_constraintEnd_toStartOf="@+id/guideline103"
        app:layout_constraintStart_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

    <Button
        android:id="@+id/btPorcentaje"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="@string/signPer"
        android:backgroundTint="@color/pink"
        android:onClick="OperacionPorcentaje"
        app:layout_constraintBottom_toTopOf="@+id/guideline203"
        app:layout_constraintEnd_toStartOf="@+id/guideline104"
        app:layout_constraintStart_toStartOf="@+id/guideline103"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

    <Button
        android:id="@+id/btDivision"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:backgroundTint="@color/pink"
        android:onClick="OperacionDividir"
        android:text="@string/signDivision"
        app:layout_constraintBottom_toTopOf="@+id/guideline203"
        app:layout_constraintEnd_toStartOf="@+id/guideline105"
        app:layout_constraintStart_toStartOf="@+id/guideline104"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

    <Button
        android:id="@+id/btSiete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="7"
        android:backgroundTint="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/guideline204"
        app:layout_constraintEnd_toStartOf="@+id/guideline102"
        app:layout_constraintStart_toStartOf="@+id/guideline101"
        app:layout_constraintTop_toBottomOf="@+id/btAC" />

    <Button
        android:id="@+id/btOcho"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="8"
        android:backgroundTint="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/guideline204"
        app:layout_constraintEnd_toStartOf="@+id/guideline103"
        app:layout_constraintStart_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toBottomOf="@+id/btDEL" />

    <Button
        android:id="@+id/btNueve"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="9"
        android:backgroundTint="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/guideline204"
        app:layout_constraintEnd_toStartOf="@+id/guideline104"
        app:layout_constraintStart_toStartOf="@+id/guideline103"
        app:layout_constraintTop_toBottomOf="@+id/btPorcentaje" />

    <Button
        android:id="@+id/btMulti"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:onClick="OperacionMulti"
        android:backgroundTint="@color/pink"
        android:text="@string/signMul"
        app:layout_constraintBottom_toTopOf="@+id/guideline204"
        app:layout_constraintEnd_toStartOf="@+id/guideline105"
        app:layout_constraintStart_toStartOf="@+id/guideline104"
        app:layout_constraintTop_toBottomOf="@+id/btDivision" />

    <Button
        android:id="@+id/btCuatro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="4"
        android:backgroundTint="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/guideline205"
        app:layout_constraintEnd_toStartOf="@+id/guideline102"
        app:layout_constraintStart_toStartOf="@+id/guideline101"
        app:layout_constraintTop_toBottomOf="@+id/btSiete" />

    <Button
        android:id="@+id/btCinco"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="5"
        android:backgroundTint="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/guideline205"
        app:layout_constraintEnd_toStartOf="@+id/guideline103"
        app:layout_constraintStart_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toBottomOf="@+id/btOcho" />

    <Button
        android:id="@+id/btSeis"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="6"
        android:backgroundTint="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/guideline205"
        app:layout_constraintEnd_toStartOf="@+id/guideline104"
        app:layout_constraintStart_toStartOf="@+id/guideline103"
        app:layout_constraintTop_toBottomOf="@+id/btNueve" />

    <Button
        android:id="@+id/btMenos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:onClick="OperacionMenos"
        android:backgroundTint="@color/pink"
        android:text="@string/signRes"
        app:layout_constraintBottom_toTopOf="@+id/guideline205"
        app:layout_constraintEnd_toStartOf="@+id/guideline105"
        app:layout_constraintStart_toStartOf="@+id/guideline104"
        app:layout_constraintTop_toBottomOf="@+id/btMulti" />

    <Button
        android:id="@+id/btUno"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="1"
        android:backgroundTint="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/guideline206"
        app:layout_constraintEnd_toStartOf="@+id/guideline102"
        app:layout_constraintStart_toStartOf="@+id/guideline101"
        app:layout_constraintTop_toBottomOf="@+id/btCuatro" />

    <Button
        android:id="@+id/btDos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="2"
        android:backgroundTint="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/guideline206"
        app:layout_constraintEnd_toStartOf="@+id/guideline103"
        app:layout_constraintStart_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toBottomOf="@+id/btCinco" />

    <Button
        android:id="@+id/btTres"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="3"
        android:backgroundTint="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/guideline206"
        app:layout_constraintEnd_toStartOf="@+id/guideline104"
        app:layout_constraintStart_toStartOf="@+id/guideline103"
        app:layout_constraintTop_toBottomOf="@+id/btSeis" />

    <Button
        android:id="@+id/btMas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:onClick="OperacionMas"
        android:backgroundTint="@color/pink"
        android:text="@string/signSum"
        app:layout_constraintBottom_toTopOf="@+id/guideline206"
        app:layout_constraintEnd_toStartOf="@+id/guideline105"
        app:layout_constraintStart_toStartOf="@+id/guideline104"
        app:layout_constraintTop_toBottomOf="@+id/btMenos" />

    <Button
        android:id="@+id/btCero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="0"
        android:backgroundTint="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/guideline207"
        app:layout_constraintEnd_toStartOf="@+id/guideline103"
        app:layout_constraintStart_toStartOf="@+id/guideline101"
        app:layout_constraintTop_toBottomOf="@+id/btUno" />

    <Button
        android:id="@+id/btCambioSigno"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="+/-"
        android:onClick="CambioSigno"
        android:backgroundTint="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/guideline207"
        app:layout_constraintEnd_toStartOf="@+id/guideline104"
        app:layout_constraintStart_toStartOf="@+id/guideline103"
        app:layout_constraintTop_toBottomOf="@+id/btTres" />

    <Button
        android:id="@+id/btIgual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:onClick="MostrarResultado"
        android:text="@string/signIg"
        android:backgroundTint="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/guideline207"
        app:layout_constraintEnd_toStartOf="@+id/guideline105"
        app:layout_constraintStart_toStartOf="@+id/guideline104"
        app:layout_constraintTop_toBottomOf="@+id/btMas" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline101"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline102"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.275"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline103"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline104"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.725"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline105"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline201"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.011983584" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2015"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.121983584" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline202"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20109439" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline203"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline204"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline205"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline206"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline207"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"/>

</androidx.constraintlayout.widget.ConstraintLayout>